@@ -1,3 +1,5 @@
 09/20/2025:
 [+] Added Unmonitored Google
 [+] Added Getaway Shootout (Thanks for the suggestion!)
+[+] Added Levil Devil: NOT a Troll Game (Thanks for the suggestion!)
+[+] Added Call of Duty: Black Ops (Thanks for the suggestion!)
