@@ -915,6 +915,14 @@
     "Getaway Shootout": {
         "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/getawayshootout/getaway.xml",
         "img": "getawayshootout.webp"
+    },
+    "Levil Devil: NOT a Troll Game": {
+        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/levildevil/levildevil.xml",
+        "img": "levildevil.jpg"
+    },
+    "Call of Duty: Black Ops [NDS EMULATED]": {
+        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/emulation/files/nds/codbo.xml",
+        "img": "codbo.jpg"
     }
   },
   "categories": {
@@ -1047,7 +1055,8 @@
         "Pokémon Yellow [GB EMULATED]",
         "Pokémon Red [GB EMULATED]",
         "Pokémon Blue [GB EMULATED]",
-        "Grand Theft Auto Advanced [GBA EMULATED]"
+        "Grand Theft Auto Advanced [GBA EMULATED]",
+        "Call of Duty: Black Ops [NDS EMULATED]"
     ]
   }
 }
